--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
           <div class="social">
             <label for="soc" class="social-btn"><i class="fas fa-share-alt"></i></label>
             <input type="checkbox" id="soc">
-            <a target="_blank" href="" class="social-link facebook"><i class="fab fa-facebook-f"></i></a>
-            <a target="_blank" href="" class="social-link whatsApp"><i class="fab fa-whatsapp"></i></a>
-            <a target="_blank" href="" class="social-link telegram"><i class="fab fa-telegram-plane"></i></a>
+            <a target="_blank" href="https://merciless-warrior.github.io/Train-Game/" class="social-link facebook"><i class="fab fa-facebook-f"></i></a>
+            <a target="_blank" href="https://merciless-warrior.github.io/Train-Game/" class="social-link whatsApp"><i class="fab fa-whatsapp"></i></a>
+            <a target="_blank" href="https://merciless-warrior.github.io/Train-Game/" class="social-link telegram"><i class="fab fa-telegram-plane"></i></a>
            </div>
        </div>
       </div>
